fixes for adaption from itcl to Tcl core 8.6

--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ TCL_BIN_DIR=@TCL_BIN_DIR@
 TCL_LIBS=@TCL_LIBS@
 TCLSH_PROGRAM=@TCLSH_PROG@
 WISH_PROGRAM=@WISH_PROG@
-INCLUDES=@PKG_INCLUDES@ @TCL_INCLUDES@ @TCLOO_INCLUDES@
+INCLUDES=@PKG_INCLUDES@ @TCL_INCLUDES@ @TK_INCLUDES@
 EXTRA_CFLAGS=@PKG_CFLAGS@
 DEFS=@DEFS@ $(EXTRA_CFLAGS)
 CPPFLAGS=@CPPFLAGS@
