--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.30.2.5 2008/10/17 23:31:55 wiede Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.30.2.6 2008/10/19 16:55:19 wiede Exp $
 
 #========================================================================
 # The names of the source files is defined in the configure script.
@@ -163,7 +163,7 @@ INCLUDES	= @PKG_INCLUDES@ @TCL_INCLUDES@ @TK_INCLUDES@ @TK_XINCLUDES@
 PKG_CFLAGS	= @PKG_CFLAGS@
 
 DEFS		= @DEFS@ $(PKG_CFLAGS) \
-		  -DITK_LIBRARY=\"$(pkglibdir)\" -DUSE_NON_CONST
+		  -DITK_LIBRARY=\"$(pkglibdir)\"
 
 CONFIG_CLEAN_FILES = @CONFIG_CLEAN_FILES@ Makefile itkConfig.sh pkgIndex.tcl
 
