--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.30.2.6 2008/10/19 16:55:19 wiede Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.30.2.7 2008/12/11 11:18:36 wiede Exp $
 
 #========================================================================
 # The names of the source files is defined in the configure script.
@@ -233,7 +233,7 @@ install-doc: doc
 	done
 
 test: binaries libraries
-	$(WISH) `@CYGPATH@ $(srcdir)/tests/all.tcl` -load "package require Itk" $(TESTFLAGS) | cat
+	$(WISH) `@CYGPATH@ $(srcdir)/tests/all.tcl` -load "package require itk" $(TESTFLAGS) | cat
 
 shell: binaries libraries
 	@$(WISH) $(SCRIPT)
