--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,10 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.30.2.7 2008/12/11 11:18:36 wiede Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.30.2.8 2010/03/18 09:42:22 wiede Exp $
+
+datarootdir = @datarootdir@
+datadir = @datadir@
 
 #========================================================================
 # The names of the source files is defined in the configure script.
@@ -233,7 +236,7 @@ install-doc: doc
 	done
 
 test: binaries libraries
-	$(WISH) `@CYGPATH@ $(srcdir)/tests/all.tcl` -load "package require itk" $(TESTFLAGS) | cat
+	$(WISH) `@CYGPATH@ $(srcdir)/tests/all.tcl` -load "package require itk $(PACKAGE_VERSION)" $(TESTFLAGS)
 
 shell: binaries libraries
 	@$(WISH) $(SCRIPT)
