fixes for release version see ChangeLog file.

--- a/Makefile.in
+++ b/Makefile.in
@@ -426,6 +426,11 @@ uninstall-binaries:
 	  rm -f $(DESTDIR)$(bindir)/$$p; \
 	done
 
+genstubs: $(srcdir)/tools/genStubs.tcl $(srcdir)/generic/itk.decls
+	@echo $(TCLSH) $(srcdir)/tools/genStubs.tcl $(srcdir)/generic $(srcdir)/generic/itk.decls
+	@$(TCLSH) $(srcdir)/tools/genStubs.tcl $(srcdir)/generic $(srcdir)/generic/itk.decls
+
+
 .PHONY: all binaries clean depend distclean doc install libraries test
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
