--- a/pkgIndex.tcl.in
+++ b/pkgIndex.tcl.in
@@ -1,3 +1,4 @@
 # Tcl package index file, version 1.0
 
-package ifneeded itk @PACKAGE_VERSION@ [list load [file join $dir "@PKG_LIB_FILE@"] itk]
+package ifneeded itk @PACKAGE_VERSION@ [list load [file join $dir "@PKG_LIB_FILE@"] Itk]
+package ifneeded Itk @PACKAGE_VERSION@ [list load [file join $dir "@PKG_LIB_FILE@"] Itk]
