The Itk_ConfigOptionPartProc "Itk_PropagatePublicVar" can only work on a scalar variable, so screen out array variables from having an ArchOptionPart created.

--- a/configure.in
+++ b/configure.in
@@ -130,8 +130,8 @@ fi
 # of private headers
 #--------------------------------------------------------------------
 
-TEA_PUBLIC_TCL_HEADERS
-#TEA_PRIVATE_TCL_HEADERS
+#TEA_PUBLIC_TCL_HEADERS
+TEA_PRIVATE_TCL_HEADERS
 
 TEA_PUBLIC_TK_HEADERS
 #TEA_PRIVATE_TK_HEADERS
