Removed some unnecessary quotes

--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -72,16 +72,16 @@ ITKLIB		= "$(OUT_DIR)\$(ITKLIBNAME)"
 ITCLIMPLIB	= "$(ITCLDIR)\win\$(BUILDDIRTOP)\$(ITCLIMPLIBNAME)"
 
 
-TKSTUBLIB	= "$(TKDIR)\win\$(BUILDDIRTOP)\tkstub$(TCL_VERSION).lib"
-TKIMPLIB	= "$(TKDIR)\win\$(BUILDDIRTOP)\tk$(TCL_VERSION)$(DBGX).lib"
-WISH		= "$(TKDIR)\win\$(BUILDDIRTOP)\wish$(TCL_VERSION)$(DBGX).exe"
-TCL_LIBRARY	= "$(TCLDIR)\library"
-TK_LIBRARY	= "$(TKDIR)\library"
-ITCL_LIBRARY	= "$(ITCLDIR:\=/)/library"
-ITK_LIBRARY	= "$(ROOT)/library
+TKSTUBLIB	= $(TKDIR)\win\$(BUILDDIRTOP)\tkstub$(TCL_VERSION).lib
+TKIMPLIB	= $(TKDIR)\win\$(BUILDDIRTOP)\tk$(TCL_VERSION)$(DBGX).lib
+WISH		= $(TKDIR)\win\$(BUILDDIRTOP)\wish$(TCL_VERSION)$(DBGX).exe
+TCL_LIBRARY	= $(TCLDIR)\library
+TK_LIBRARY	= $(TKDIR)\library
+ITCL_LIBRARY	= $(ITCLDIR:\=/)/library
+ITK_LIBRARY	= $(ROOT)/library
 
 ITCLSTUBLIBNAME	= itclstub$(ITCL_VERSION).lib
-ITCLSTUBLIB	= "$(ITCLDIR)\win\$(BUILDDIRTOP)\$(ITCLSTUBLIBNAME)"
+ITCLSTUBLIB	= $(ITCLDIR)\win\$(BUILDDIRTOP)\$(ITCLSTUBLIBNAME)
 
 BIN_INSTALL_DIR		= $(_INSTALLDIR)\..\bin
 DOC_INSTALL_DIR		= $(_INSTALLDIR)\..\doc
